kubernete-training/tp-networkpolicy/networkPolicy_allowAll.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:  
  name: policy-allowall
  namespace: testqa
spec:
  podSelector:
    {}
  policyTypes:
    - Ingress
  ingress: 
    - {}
