kubernete-training/tp-networkpolicy/networkPolicy_denyAll.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:  
  name: policy-denyall
  namespace: testqa
spec:
  podSelector:
    {}
  policyTypes:
    - Ingress
  ingress: 
    []
